# wiktiScraper

./: Cargo.toml
src/: lang_option.rs  lang_tools.rs  lib.rs  main.rs  requester.rs
