[package]
name = "iced_test"
version = "0.1.0"
authors = ["Michael <michaelpurtill123@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
scraper = "0.12.0"
futures = "0.3"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }